--- a/index.html
+++ b/index.html
@@ -121,7 +121,28 @@
                 <div class="subcategory-list" id="phys-subs">
                     <div class="subcategory"><input type="checkbox" id="phys-kinematics" data-file="flashcards/kinematics.js"><label for="phys-kinematics">Kinematics</label></div>
                     <div class="subcategory"><input type="checkbox" id="phys-dynamics" data-file="flashcards/dynamics.js"><label for="phys-dynamics">Dynamics</label></div>
-                    <!-- Add all Physics subdivisions here (shortened for brevity; full list in next step if needed) -->
+                    <div class="subcategory"><input type="checkbox" id="phys-work-energy-and-power" data-file="flashcards/work-energy-and-power.js"><label for="phys-work-energy-and-power">Work Energy and Power</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-circular-motion" data-file="flashcards/circular-motion.js"><label for="phys-circular-motion">Circular Motion</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-gravitation" data-file="flashcards/gravitation.js"><label for="phys-gravitation">Gravitation</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-elasticity" data-file="flashcards/elasticity.js"><label for="phys-elasticity">Elasticity</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-heat-and-temperature" data-file="flashcards/heat-and-temperature.js"><label for="phys-heat-and-temperature">Heat and Temperature</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-thermal-expansion" data-file="flashcards/thermal-expansion.js"><label for="phys-thermal-expansion">Thermal Expansion</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-rate-of-heat-flow" data-file="flashcards/rate-of-heat-flow.js"><label for="phys-rate-of-heat-flow">Rate of Heat Flow</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-quantity-of-heat-energy" data-file="flashcards/quantity-of-heat-energy.js"><label for="phys-quantity-of-heat-energy">Quantity of Heat Energy</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-ideal-gas" data-file="flashcards/ideal-gas.js"><label for="phys-ideal-gas">Ideal Gas</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-reflection-of-curve-mirror" data-file="flashcards/reflection-of-curve-mirror.js"><label for="phys-reflection-of-curve-mirror">Reflection of Curve Mirror</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-refraction-and-plane-surface" data-file="flashcards/refraction-and-plane-surface.js"><label for="phys-refraction-and-plane-surface">Refraction and Plane Surface</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-refraction-through-prism" data-file="flashcards/refraction-through-prism.js"><label for="phys-refraction-through-prism">Refraction through Prism</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-lenses" data-file="flashcards/lenses.js"><label for="phys-lenses">Lenses</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-dispersion" data-file="flashcards/dispersion.js"><label for="phys-dispersion">Dispersion</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-electric-charge" data-file="flashcards/electric-charge.js"><label for="phys-electric-charge">Electric Charge</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-electric-field" data-file="flashcards/electric-field.js"><label for="phys-electric-field">Electric Field</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-potential-energy" data-file="flashcards/potential-energy.js"><label for="phys-potential-energy">Potential Energy</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-capacitor" data-file="flashcards/capacitor.js"><label for="phys-capacitor">Capacitor</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-nuclear-physics" data-file="flashcards/nuclear-physics.js"><label for="phys-nuclear-physics">Nuclear Physics</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-direct-current" data-file="flashcards/direct-current.js"><label for="phys-direct-current">Direct Current (DC)</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-solids" data-file="flashcards/solids.js"><label for="phys-solids">Solids</label></div>
+                    <div class="subcategory"><input type="checkbox" id="phys-recent-trend-in-physics" data-file="flashcards/recent-trend-in-physics.js"><label for="phys-recent-trend-in-physics">Recent Trend in Physics</label></div>
                 </div>
             </div>
             <!-- Nepali -->
@@ -144,7 +165,24 @@
                 <div class="category-label" data-target="math-subs">Math</div>
                 <div class="subcategory-list" id="math-subs">
                     <div class="subcategory"><input type="checkbox" id="math-logic-and-set" data-file="flashcards/logic-and-set.js"><label for="math-logic-and-set">Logic and Set</label></div>
-                    <!-- Add all Math subdivisions here (shortened for brevity) -->
+                    <div class="subcategory"><input type="checkbox" id="math-real-number" data-file="flashcards/real-number.js"><label for="math-real-number">Real Number</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-function" data-file="flashcards/function.js"><label for="math-function">Function</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-curve-sketching" data-file="flashcards/curve-sketching.js"><label for="math-curve-sketching">Curve Sketching</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-sequence-and-series" data-file="flashcards/sequence-and-series.js"><label for="math-sequence-and-series">Sequence and Series</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-matrix" data-file="flashcards/matrix.js"><label for="math-matrix">Matrix</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-quadratic" data-file="flashcards/quadratic.js"><label for="math-quadratic">Quadratic</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-complex-number" data-file="flashcards/complex-number.js"><label for="math-complex-number">Complex Number</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-trigonometry" data-file="flashcards/trigonometry.js"><label for="math-trigonometry">Trigonometry</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-analytical-geometry" data-file="flashcards/analytical-geometry.js"><label for="math-analytical-geometry">Analytical Geometry</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-coordinate-in-space" data-file="flashcards/coordinate-in-space.js"><label for="math-coordinate-in-space">Coordinate in Space</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-vectors" data-file="flashcards/vectors.js"><label for="math-vectors">Vectors</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-statistics" data-file="flashcards/statistics.js"><label for="math-statistics">Statistics</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-limit" data-file="flashcards/limit.js"><label for="math-limit">Limit</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-derivative" data-file="flashcards/derivative.js"><label for="math-derivative">Derivative</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-integration" data-file="flashcards/integration.js"><label for="math-integration">Integration</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-numerical-computation" data-file="flashcards/numerical-computation.js"><label for="math-numerical-computation">Numerical Computation</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-numerical-integration" data-file="flashcards/numerical-integration.js"><label for="math-numerical-integration">Numerical Integration</label></div>
+                    <div class="subcategory"><input type="checkbox" id="math-dynamic" data-file="flashcards/dynamic.js"><label for="math-dynamic">Dynamic</label></div>
                 </div>
             </div>
             <!-- Biology -->
@@ -152,35 +190,15 @@
                 <div class="category-label" data-target="bio-subs">Biology</div>
                 <div class="subcategory-list" id="bio-subs">
                     <div class="subcategory"><input type="checkbox" id="bio-bio-molecules" data-file="flashcards/bio-molecules.js"><label for="bio-bio-molecules">Bio Molecules</label></div>
-                    <!-- Add all Biology subdivisions here (shortened for brevity) -->
-                </div>
-            </div>
-        </div>
-        <button id="start-btn">Start</button>
-    </div>
-    <script>
-        document.querySelectorAll('.category-label').forEach(label => {
-            label.addEventListener('click', () => {
-                const target = document.getElementById(label.getAttribute('data-target'));
-                target.classList.toggle('active');
-            });
-        });
-
-        const checkboxes = document.querySelectorAll('input[type="checkbox"]');
-        const startBtn = document.getElementById('start-btn');
-
-        checkboxes.forEach(checkbox => {
-            checkbox.addEventListener('change', () => {
-                const checked = document.querySelectorAll('input[type="checkbox"]:checked');
-                startBtn.classList.toggle('active', checked.length > 0);
-            });
-        });
-
-        startBtn.addEventListener('click', () => {
-            const selectedFiles = Array.from(document.querySelectorAll('input[type="checkbox"]:checked'))
-                .map(cb => cb.getAttribute('data-file'));
-            window.location.href = `flashcards.html?files=${encodeURIComponent(JSON.stringify(selectedFiles))}`;
-        });
-    </script>
-</body>
-</html>
+                    <div class="subcategory"><input type="checkbox" id="bio-cell" data-file="flashcards/cell.js"><label for="bio-cell">Cell</label></div>
+                    <div class="subcategory"><input type="checkbox" id="bio-fungi" data-file="flashcards/fungi.js"><label for="bio-fungi">Fungi</label></div>
+                    <div class="subcategory"><input type="checkbox" id="bio-lichen" data-file="flashcards/lichen.js"><label for="bio-lichen">Lichen</label></div>
+                    <div class="subcategory"><input type="checkbox" id="bio-algae" data-file="flashcards/algae.js"><label for="bio-algae">Algae</label></div>
+                    <div class="subcategory"><input type="checkbox" id="bio-bryophyta" data-file="flashcards/bryophyta.js"><label for="bio-bryophyta">Bryophyta</label></div>
+                    <div class="subcategory"><input type="checkbox" id="bio-pteridophytes" data-file="flashcards/pteridophytes.js"><label for="bio-pteridophytes">Pteridophytes</label></div>
+                    <div class="subcategory"><input type="checkbox" id="bio-gymnosperm" data-file="flashcards/gymnosperm.js"><label for="bio-gymnosperm">Gymnosperm</label></div>
+                    <div class="subcategory"><input type="checkbox" id="bio-angiosperms" data-file="flashcards/angiosperms.js"><label for="bio-angiosperms">Angiosperms</label></div>
+                    <div class="subcategory"><input type="checkbox" id="bio-monera" data-file="flashcards/monera.js"><label for="bio-monera">Monera</label></div>
+                    <div class="subcategory"><input type="checkbox" id="bio-virus" data-file="flashcards/virus.js"><label for="bio-virus">Virus</label></div>
+                    <div class="subcategory"><input type="checkbox" id="bio-ecosystem" data-file="flashcards/ecosystem.js"><label for="bio-ecosystem">Ecosystem</label></div>
+   
