--- a/flashcards.html
+++ b/flashcards.html
@@ -95,12 +95,18 @@
             margin: 20px auto;
             max-width: 400px;
         }
+        .error {
+            color: red;
+            font-size: 0.9em;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Your Flashcards</h1>
         <div id="flashcard-container"></div>
+        <div id="error" class="error"></div>
         <div class="btn-group">
             <button class="btn back-btn" onclick="window.location.href='index.html'">Back</button>
             <button class="btn flip-btn" id="flip-btn">Flip</button>
@@ -127,30 +133,51 @@
             }
 
             const promises = selectedFiles.map(file => {
+                console.log(`Attempting to fetch: ${file}`); // Debug log
                 return fetch(file)
                     .then(response => {
-                        if (!response.ok) return [];
+                        if (!response.ok) {
+                            console.error(`Failed to fetch ${file}: ${response.statusText}`);
+                            return [];
+                        }
                         return response.text();
                     })
                     .then(text => {
-                        if (!text) return;
+                        if (!text) {
+                            console.warn(`Empty response from ${file}`);
+                            return;
+                        }
                         const script = document.createElement('script');
                         script.text = text;
                         document.body.appendChild(script);
                         document.body.removeChild(script);
-                        flashcards = flashcards.concat(window.flashcardData || []);
+                        if (window.flashcardData) {
+                            console.log(`Loaded ${window.flashcardData.length} cards from ${file}`);
+                            flashcards = flashcards.concat(window.flashcardData);
+                            window.flashcardData = null; // Clear to avoid reuse
+                        } else {
+                            console.warn(`No flashcardData from ${file}`);
+                        }
                     })
-                    .catch(() => []);
+                    .catch(error => {
+                        console.error(`Error fetching ${file}: ${error}`);
+                        return [];
+                    });
             });
 
             Promise.all(promises).then(() => {
-                if (flashcards.length > 0) showNextCard();
-                else showNoCardsMessage();
+                if (flashcards.length > 0) {
+                    console.log(`Total flashcards loaded: ${flashcards.length}`);
+                    showNextCard();
+                } else {
+                    showNoCardsMessage();
+                }
             });
         }
 
         function showNextCard() {
             const container = document.getElementById('flashcard-container');
+            const errorDiv = document.getElementById('error');
             if (flashcards.length === 0) {
                 container.innerHTML = '<div class="completed-box">You are all set for today!</div>';
                 return;
@@ -158,14 +185,17 @@
 
             cardIndex = Math.floor(Math.random() * flashcards.length);
             currentCard = flashcards[cardIndex];
+            const imgSrc = currentCard.front;
+            console.log(`Loading image from: ${imgSrc}`); // Debug image path
             container.innerHTML = `
                 <div class="flashcard">
                     <div class="card">
                         <div class="back">${currentCard.back}</div>
-                        <div class="front"><img src="${currentCard.front}" alt="Flashcard Image"></div>
+                        <div class="front"><img src="${imgSrc}" alt="Flashcard Image" onload="console.log('Image loaded: ${imgSrc}')" onerror="document.getElementById('error').textContent='Image not found: ${imgSrc}'"></div>
                     </div>
                 </div>
             `;
+            errorDiv.textContent = ''; // Clear previous errors
         }
 
         function showNoCardsMessage() {
